test/library/standard/Sort/errors/error-multiple-interfaces.1.good
error-multiple-interfaces.chpl:27: error: The comparator R1 should only implement one sort comparator interface.
